--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-simple-typewriter": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
